force-app/main/default/objects/Product_Import_Request__c/Product_Import_Request__c.object-meta.xml
<CustomObject>
    <description>Staging record for the SAP -&gt; Salesforce product variation import. One record per product group (parent + variations), inserted by ProductVariationRestResource and drained serially by ProductVariationBatch (scope=1). Serializes Commerce ConnectApi calls to avoid concurrent system error</description>
    <label>Product Import Request</label>
    <nameField>
        <displayFormat>PIR-{00000}</displayFormat>
        <label>Request Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Import Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>