force-app/main/default/objects/Product_Import_Request__c/fields/AttributeSetId__c.field-meta.xml
<CustomField>
    <fullName>AttributeSetId__c</fullName>
    <description>Commerce product attribute set id from the Mule request envelope, stored per record so the drainer batch is stateless.</description>
    <label>Attribute Set Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>