force-app/main/default/objects/Product_Import_Request__c/fields/CorrelationId__c.field-meta.xml
<CustomField>
    <fullName>CorrelationId__c</fullName>
    <description>MuleSoft correlation id of the sync run that staged this group. Groups all records of one run for end-to-end tracing against the Mule logs.</description>
    <label>Correlation Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>