force-app/main/default/objects/Product_Import_Request__c/fields/ERPProductNumber__c.field-meta.xml
<CustomField>
    <fullName>ERPProductNumber__c</fullName>
    <description>SAP material number of the group&apos;s parent product, extracted at staging time for cross-referencing with SAP-side logs.</description>
    <label>ERP Product Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>