force-app/main/default/objects/Product_Import_Request__c/fields/ErrorMessage__c.field-meta.xml
<CustomField>
    <fullName>ErrorMessage__c</fullName>
    <description>Why processing failed: the per-product error from ProductVariationService, or the exception type/message captured by the BatchApexErrorEvent handler for uncatchable scope failures.</description>
    <label>Error Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>