force-app/main/default/objects/Product_Import_Request__c/fields/ParentSKU__c.field-meta.xml
<CustomField>
    <fullName>ParentSKU__c</fullName>
    <description>StockKeepingUnit of the group&apos;s parent product, extracted at staging time so list views answer &quot;which product is this&quot; without opening the JSON payload.</description>
    <label>Parent SKU</label>
    <length>255</length>
    <type>Text</type>
</CustomField>