force-app/main/default/objects/Product_Import_Request__c/fields/Payload__c.field-meta.xml
<CustomField>
    <fullName>Payload__c</fullName>
    <description>JSON of a single product group ({parent, variations}) exactly as received from Mule. Per-group granularity keeps the payload far below the 131k long-text cap and limits a failure&apos;s blast radius to one product.</description>
    <label>Payload</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>