force-app/main/default/objects/Product_Import_Request__c/fields/ProcessedAt__c.field-meta.xml
<CustomField>
    <fullName>ProcessedAt__c</fullName>
    <description>When the record reached a terminal status (Done or Failed). Drives the retention sweep in ProductVariationBatch.finish (Done kept 7 days, Failed kept 30 days).</description>
    <label>Processed At</label>
    <type>DateTime</type>
</CustomField>