force-app/main/default/objects/Product_Import_Request__c/fields/RetryCount__c.field-meta.xml
<CustomField>
    <fullName>RetryCount__c</fullName>
    <description>Number of batch scope failures (uncatchable system errors) this record has caused, incremented by the BatchApexErrorEvent handler. Past the retry limit the record is marked Failed instead of re-queued.</description>
    <label>Retry Count</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>