force-app/main/default/objects/Product_Import_Request__c/fields/WebStoreId__c.field-meta.xml
<CustomField>
    <fullName>WebStoreId__c</fullName>
    <description>Commerce webstore id from the Mule request envelope, stored per record so the drainer batch is stateless.</description>
    <label>WebStore Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>